--- a/themes/smigle/exampleSite/config.yaml
+++ b/themes/smigle/exampleSite/config.yaml
@@ -1,5 +1,5 @@
 # exampleSite/config.yaml
-baseURL: https://smigle-hugo-theme.netlify.app/ # Replace with your domain
+baseURL: https://www.zmt.ac.cn/ # Replace with your domain
 languageCode: en-us
 theme: smigle
 themesDir: ../.. # Only needed for running the example site
@@ -54,4 +54,4 @@ params:
       url: https://www.reddit.com/user/ian-s-mcb
     - name: StackOverflow
       url: https://stackoverflow.com/users/3417846/ian-s-mcb
-  subtitle: "Description about Blog Author"
+  subtitle: "KM"
