--- a/config.toml
+++ b/config.toml
@@ -54,7 +54,7 @@ title = "ZMT"
 
   [[params.social]]
     name = "GitHub"
-    url = "https://github.com/ian-s-mcb"
+    url = "https://github.com/zmtn"
 
   [[params.social]]
     name = "GitLab"
