--- a/config.toml
+++ b/config.toml
@@ -62,7 +62,7 @@ title = "ZMT"
 
   [[params.social]]
     name = "Quizlet"
-    url = "https://quizlet.com/ian-s-mcb"
+    url = "https://quizlet.com/zmtar"
 
   [[params.social]]
     name = "Reddit"
