--- a/config.toml
+++ b/config.toml
@@ -66,10 +66,10 @@ title = "ZMT"
 
   [[params.social]]
     name = "Reddit"
-    url = "https://www.reddit.com/user/ian-s-mcb"
+    url = "https://www.reddit.com/user/vlikuiv"
 
   [[params.social]]
     name = "StackOverflow"
-    url = "https://stackoverflow.com/users/3417846/ian-s-mcb"
+    url = "https://stackoverflow.com/users/23910950/likui"
 
-  subtitle = "KM"
+  subtitle = "Many a little makes a mackle"
