--- a/themes/smigle/exampleSite/config.yaml
+++ b/themes/smigle/exampleSite/config.yaml
@@ -54,4 +54,4 @@ params:
       url: https://www.reddit.com/user/ian-s-mcb
     - name: StackOverflow
       url: https://stackoverflow.com/users/3417846/ian-s-mcb
-  subtitle: "KM"
+  subtitle: "Many a little makes a mackle"
