--- a/config.toml
+++ b/config.toml
@@ -11,15 +11,15 @@ title = "ZMT"
     weight = 1
 
   [[menu.main]]
-    identifier = "about"
-    name = "About"
-    url = "/about/"
-    weight = 2
-
-  [[menu.main]]
     identifier = "posts"
     name = "Posts"
     url = "/posts/"
+    weight = 2
+
+  [[menu.main]]
+    identifier = "daily"
+    name = "Daily"
+    url = "/daily/"
     weight = 3
 
   [[menu.main]]
@@ -35,10 +35,15 @@ title = "ZMT"
     weight = 5
 
   [[menu.main]]
+    identifier = "about"
+    name = "About"
+    url = "/about/"
+    weight = 6
+  [[menu.main]]
     identifier = "rss"
     name = "RSS"
     url = "/index.xml"
-    weight = 6
+    weight = 7
 
 [params]
   abbrDateFmt = "Jan 2"
