--- a/config.toml
+++ b/config.toml
@@ -23,27 +23,33 @@ title = "ZMT"
     weight = 3
 
   [[menu.main]]
+    identifier = "read"
+    name = "Read"
+    url = "/read/"
+    weight = 4
+
+  [[menu.main]]
     identifier = "categories"
     name = "Categories"
     url = "/categories/"
-    weight = 4
+    weight = 5
 
   [[menu.main]]
     identifier = "tags"
     name = "Tags"
     url = "/tags/"
-    weight = 5
+    weight = 6
 
   [[menu.main]]
     identifier = "about"
     name = "About"
     url = "/about/"
-    weight = 6
+    weight = 7
   [[menu.main]]
     identifier = "rss"
     name = "RSS"
     url = "/index.xml"
-    weight = 7
+    weight = 8
 
 [params]
   abbrDateFmt = "Jan 2"
